2007-01-19  Andreia Gaita  <avidigal@novell.com>

	* PrintingServicesUnix.cs: Add is_default flag check for 
	detecting default printer when cupsGetDefault doesn't return
	valid values (mainly ubuntu). Fixes #80198, #80519

2007-01-09  Sebastien Pouliot  <sebastien@ximian.com>

	* PrintingServices.cs: Unify platform detection code.

2006-12-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* PrintingServicesUnix.cs: Add "landscape" option
	when using PaperSettings.Landscape set to true. Also
	swap the width and height for the postscript file.

2006-12-01  Andreia Gaita  <avidigal@novell.com>

	* PrintingServicesUnix: Proper size structure use for 64 bit
	support.

2006-12-01  Andreia Gaita  <avidigal@novell.com>

	* PrintingServicesUnix: *properly* check return value from 
	cupsGetDefault. If there are no default printers set, 
	check if there are installed printers, and use that.
	Hopefully fixes #79835

2006-12-01  Andreia Gaita  <avidigal@novell.com>

	* PrintingServicesUnix: check return value from cupsGetDefault.
	Hopefully fixes #79835

2006-12-01 Jordi Mas i Hernandez <jordimash@gmail.com>

	* PrintingServicesWin32.cs: Fixes paper sizes reading. The POINT 
	structure is 8 bytes long not 4. This fixes margins calculations 
	(based on the paper size) that were badly broken. 

2006-11-28  Andreia Gaita  <avidigal@novell.com>

	* PageSettings.cs: 
	- internal member name changes to help
	out with intelisense. 
	- Use internal members directly instead of using
	corresponding properties so that exceptions are not thrown
	* PrintingServicesWin32:
	- Only return DefaultPrinter if it is actually valid. This
	is because Win32GetDefaultPrinter returns a printer name
	even if PrintSpooler is stopped (which should  behave the
	same way as if there are no printers installed)
	- Do not try to allocate if EnumPrinters returns 0
	
2006-11-25 Jordi Mas i Hernandez <jordimash@gmail.com>

	* PrintingServicesUnix.cs: Implements GetPrintDialogInfo
